# stream-diffusion-on-mac-sample

./: .gitignore  POETRY_VOICE_SETUP.md  README.md  README_LLM_INTEGRATION.md  README_PHONEME_SYSTEM.md  STREAMDIFFUSION_UPGRADE.md  config.json  config.py  main_mandala.py  main_moon.py  pyproject.toml  requirements.txt  send_prompt.py
app/: phoneme_dictionary.py  stream_diffusion.py  utils.py
app/examples/: camera_test.py  test.py  web_camera.py  web_camera_oo.py
ref/: _ref_dictionaries.py  _ref_stream_diffusion.py  _ref_web_camera.py
