[tool.poetry]
name = "stream-diffusion-on-mac-sample"
version = "0.1.0"
description = ""
authors = ["kawamou <kazusada.kawamo.nt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.0"
torch = "2.1.2"
torchvision = "^0.16.2"
diffusers = "0.24.0"
huggingface-hub = "^0.19.4"
accelerate = "0.24.1"
opencv-python = "^4.9.0.80"
streamdiffusion = "^0.1.1"
types-pillow = "^10.2.0.20240111"

# 音声認識関連
speechrecognition = "^3.10.0"
pyaudio = "^0.2.11"

# 基本依存関係
python-dotenv = "^1.0.0"

# LLM統合（オプション）
openai = {version = "^1.0.0", optional = true}
requests = {version = "^2.31.0", optional = true}

# GUI (オプション)
PyQt5 = {version = "^5.15.0", optional = true}

[tool.poetry.extras]
voice = ["speechrecognition", "pyaudio"]
llm = ["openai", "requests"]
gui = ["PyQt5"]
full = ["speechrecognition", "pyaudio", "openai", "requests", "PyQt5"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
